# Zeruel

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
images/: Images.txt
rust_qr/: .env  Cargo.toml
rust_qr/db/: url_database.db
rust_qr/migrations/2023-07-16-101035_create_url/: down.sql  up.sql
rust_qr/src/: db_connection.rs  load_short.rs  main.rs  models.rs  qr_maker.rs  schema.rs  shorten.rs
rust_qr/static/: index.html  main.css  test.html
rust_qr/templates/: big_url.html.tera  error.html.tera  index.html.tera  layout.html.tera  short_url.html.tera
