[package]
name = "Zeruel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
chrono = "0.4.26"
dotenvy = "0.15"
percent-encoding = "2.3.0"
rand = "0.8.5"
qrcode = "0.12.0"
image = "0.23.14"
base64 = "0.21.2"